Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -9,246 +9,109 @@
 }
 
 .App {
-  /* height: 100vh; */
-  /* width: 100vw; */
-  /* background-image: url("./desktop-design-home-light.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-image: url("./desktop-design-home-light.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain; */
-
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: flex-start;
-  font-family: var(--font-family);
+  background-size: contain;
 }
-
-#dark,
-#dark .contentContainer {
-  background-color: var(--very-dark-blue-bg);
-}
-
-
-#dark .card {
-  background-color: var(--dark-blue);
-  color: white;
-
-}
-
-#dark .titleBar,
-#dark .card,
-#dark .input,
-#dark .searchInput {
-  box-shadow: 0rem 0rem 0.25rem var(--very-dark-blue-text);
-}
-
-#dark .titleBar,
-#dark .darkMode {
-  background-color: var(--dark-blue);
-  color: white;
-}
-
-#dark .card .detailTextTitle {
-  color: white
-}
-
-#dark ::placeholder {
-  color: white;
-}
-
-#dark .input,
-#dark .searchInput {
-  background-color: var(--very-dark-blue-bg);
-  color: white;
-}
-
 
 .contentContainer {
-  /* opacity: 0.5; */
-  background-color: var(--very-light-gray);
-  width: 68.5%;
+  opacity: 0;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
+
 }
 
 .titleBar {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   background-color: white;
-  box-shadow: 0 0.15rem 0.25rem rgba(211, 211, 211, 0.254);
-  opacity: 1;
-  height: 4.5rem;
-  padding: 0 4.5rem;
+  box-shadow: 0 0 0.25rem lightgray;
+  height: 5rem;
+  padding: 0 5rem;
+
 }
 
 .titleBar .appTitle {
-  font-size: 22px;
+  font-size: 1.5rem;
+  color: var(--very-dark-blue-text)
 }
 
 .titleBar .darkMode {
-  width: 6.1rem;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  cursor: pointer;
+  width: 6.75rem;
   color: var(--very-dark-blue-text);
-  font-size: 14px;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 .inputContainer {
   width: 100%;
-  padding: 0 4.5rem;
-  margin-top: 2.85rem;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 3rem 5rem 0 5rem;
 }
 
-.inputContainer .input {
+.input {
   border: none;
-  border-radius: 0.35rem;
-  box-shadow: 0 0rem 0.5rem rgba(211, 211, 211, 0.35);
-  background-color: white;
-
+  border-radius: 0.45rem;
+  box-shadow: 0 0 0.35rem rgb(211, 211, 211);
 }
 
 .inputContainer .searchInput {
-  width: 31.5%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 4.2rem;
-  font-family: var(--font-family);
-  font-size: 13px;
+  padding: 1.3rem 4.5rem;
+  width: 21rem;
 
+  letter-spacing: 0.5px;
 }
 
 .inputContainer .searchIcon {
   position: absolute;
-  margin-left: 1.8rem;
+  padding: 1rem 2rem;
+  font-size: 22px;
 }
 
-
 .selectWrapper {
-  width: 15.5%;
-  padding: 0rem;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
+  width: 9.5rem;
+  padding: 0 1.5rem;
+  background-color: white;
   position: relative;
 }
 
-.inputContainer .regionFilter {
-  width: 63%;
-  border: none;
-  padding: 1rem 1.25rem;
-  appearance: none;
-  user-select: none;
-
-  font-size: 12px;
-  font-weight: 600;
-
-  cursor: pointer;
-}
-
-
-.inputContainer .regionFilterOptions {
-  margin-bottom: 0;
+.selectWrapper .regionFilter {
+  color: var(--very-dark-blue-text);
   width: 100%;
-  position: absolute;
-  top: 75%;
-  list-style: none;
-  padding-left: 0rem;
+  font-size: 14px;
+  padding: 1rem 0.15rem;
   display: flex;
-  height: 9.7rem;
-  flex-direction: column;
-  justify-content: center;
-  row-gap: 0.6285rem;
-}
-
-.inputContainer .regionFilterOptions li {
-  cursor: pointer;
-  user-select: none;
-  width: 100%;
   align-items: center;
-  padding-left: 1.25rem;
-  font-size: 12px;
-  font-weight: 600;
-
+  justify-content: space-between;
 }
 
-.allCardsContainer {
-  margin-top: 2.75rem;
+.selectWrapper .regionFilterOptions {
+  color: var(--very-dark-blue-text);
+  font-size: 14px;
+  position: absolute;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  left: 0rem;
+  padding: 1rem 0rem;
   width: 100%;
-  padding: 0 1.75rem;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  row-gap: 3.5rem;
-}
-
-.cardContainer {
-  display: flex;
-  justify-content: center;
-  width: 18rem;
-  height: 20rem;
-}
-
-.card {
-  border-radius: 0.35rem;
-  height: 96.5%;
-  width: 84%;
-  overflow: hidden;
-  box-shadow: 0rem 0rem 0.75rem rgba(211, 211, 211, 0.275);
+  margin-top: 0.35rem;
   background-color: white;
 
-}
-
-.card .cardImg {
-  width: 100%;
-  height: 48%;
-}
-
-.card .cardImg img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card .cardText {
-  padding: 0 1.45rem;
-  height: 12rem;
-}
-
-
-.card .cardText h4 {
-  font-family: var(--font-family);
-  font-weight: 800;
-  width: 100%;
-  margin: 1.5rem 0 0 0rem;
-}
-
-.card .cardText .cardDetailsContainer {
   display: flex;
-  flex-wrap: wrap;
-  margin-top: 0.85rem;
-  row-gap: 0.4rem;
-
+  flex-direction: column;
+  row-gap: 0.5rem;
 }
 
-.card .cardText .detailTextTitle {
-  font-weight: 800;
-  color: var(--very-dark-blue-text);
-  margin-right: 0.2rem;
-
-}
-
-.card .cardText .cardTextDetails {
-  font-size: 12px;
-  font-weight: 300;
-  width: 100%;
+.selectWrapper .regionFilterOptions li {
+  padding-left: 1.5rem;
 }
